nueva version de invie - verde

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     </style>
   </head>
   <body>
-    <img src="header.png" alt="">
-    <img src="hero.png" alt="">
-	<img src="acustica.png" alt="">
-    <img src="clasica.png" alt="">
+    <img src="invie-nueva-version.png" alt="">  
   </body>
 </html>
