--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <img src="hero.png" alt="">
 	<img src="acustica.png" alt="">
     <img src="clasica.png" alt="">
+	<img src="footer.png" alt="">
   </body>
 </html>
